--- a/index.html
+++ b/index.html
@@ -414,7 +414,15 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="mt-24 text-center" data-aos="fade-up">
+                <div class="bg-gradient-to-r from-blue-900 to-blue-800 text-white rounded-2xl p-8">
+                    <h3 class="text-3xl font-bold mb-6">Need Custom Solutions ?</h3>
+                    <p class="text-xl text-blue-100 mb-8">Our team of experts is ready to help you find the perfect components for your specific requirements</p>
+                    <a href="#contact" class="inline-block">
+                        <button class="bg-white text-blue-900 px-8 py-4 rounded-lg font-semibold hover:bg-blue-50 transition duration-300 transform hover:scale-105 hover:shadow-lg">Contact Our Experts</button>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -432,6 +440,7 @@
                     </div>
                 </div>
             </div>
+     
         </div>
     </section> -->
 
