--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
         .mobile-menu {
             display: none;
-            padding: 0.5rem;
+            padding: 10px;
+            background-color: white;
         }
 
         .mobile-menu.active {
@@ -83,7 +84,7 @@
         }
 
         .mobile-menu a {
-            color: white;
+            color:  #1d4ed8;
             text-decoration: none;
             display: block;
             padding: 0.5rem 0.75rem;
@@ -94,6 +95,7 @@
 
         .mobile-menu a:hover {
             background-color: #1d4ed8;
+            color:  white;
         }
 
         /* Desktop styles */
