--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
    
 
     <!-- Hero Section -->
+    <section id="home">
     <div class="bg-gradient-to-r from-blue-900 to-blue-800 text-white py-24">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center">
@@ -165,7 +166,8 @@
             </div>
         </div>
     </div>
-
+    </section>
+    
     <section id="about" class="py-20 bg-gradient-to-b from-white to-blue-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-4xl font-bold text-center mb-16 text-blue-900">About Us</h2>
