--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         }
 
         .nav-links a:hover {
-            background-color: #1d4ed8;
+            background-color: white;
+            color:#1d4ed8;
         }
 
         .mobile-menu-button {
